# test_xp

./: 0memo.txt  ca.crt  client1.crt  client1.key  client_1.ovpn  dnseed.md  network.md  ta.key
classes/: newFile.txt  test.txt
dnseed/: dnseeddb.cpp  dnseeddb.h  dnseedserver.cpp  dnseedserver.h
testClient/: CMakeLists.txt
testClient/classes/: main.cpp
testClient/src/: CMakeLists.txt  a.out  main.cpp
